# test

./: CMakeLists.txt  learncmake.h.in  main.cpp  run.sh
adder/: CMakeLists.txt  adder.cpp
adder/src/: adder.cpp
